mongodb-prom/k8s/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana
  labels:
    app: grafana
spec:
  type: LoadBalancer
#  Changed to LoadBalancer by EB
#  type: ClusterIP
  ports:
  - name: service
    # Port changed to 80 and added target port 3000 by EB 2/20/2024
    port: 3000
    protocol: TCP
#    targetPort: 3000
  selector:
    app: grafana
