mongodb-prom/k8s/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
#    alb.ingress.kubernetes.io/load-balancer-name: grafana-ingress
    cloud.google.com/load-balancer-type: External
spec:
  ingressClassName: id-app
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: service
#                  number: 80
